@@ -1,3 +1,8 @@
+2015-01-13  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/64404
+	* gcc.dg/vect/pr64404.c: New testcase.
+
 2014-01-13  Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/64568
